# constexpr_HID

./: .gitmodules  CMakeLists.txt  README.md  conanfile.py  todo.md
examples/: .gdb_history  example1.cpp
include/constexpr_HID/: byte.hpp  constexpr_HID.hpp  global_items.hpp  internal.hpp  local_items.hpp  main_items.hpp  uses_types.hpp
